fixed some of the spacing issues ;

--- a/stylesheets/dashboard.css
+++ b/stylesheets/dashboard.css
@@ -17,7 +17,7 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
-    color: black;
+    color: white;
 }
 
 .image-text {
