--- a/stylesheets/roll.css
+++ b/stylesheets/roll.css
@@ -3,6 +3,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    color: white;
 }
 
 .roll-header {
